fix overflow, might break something

--- a/css.css
+++ b/css.css
@@ -1,8 +1,5 @@
 body{
   font-family: 'Noto Sans', sans-serif;
-  width: 100vw;
-  height: 100vh;
-  /*color: #fff; dont need?*/
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
@@ -68,7 +65,7 @@ body{
   text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
 }
 
-.title{/*need fix*/
+.title{
   font-size: 300%;
   text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
   color: rgba(255, 255, 255, 0.7);
@@ -81,7 +78,7 @@ body{
   background: rgba(255,255,255,0.4);
   padding: 2% 5% 2% 5%;
   width: 75%;
-  margin: 0 0 2% 10%;
+  margin: 0% 0% 2% 10%;
 }
 
 h2{
